openshift/deployment-rh-brand-model.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"rh-brand-model:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"rh-brand-model\")].image"}]'
  labels:
    app: rh-brand-model
    app.kubernetes.io/component: rh-brand-model
    app.kubernetes.io/instance: rh-brand-model
  name: rh-brand-model
  namespace: red-brand
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: rh-brand-model
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: rh-brand-model
    spec:
      containers:
      - env:
        - name: INDEX_NAME
          value: brand
        - name: INDEX_ROOT
          value: /opt/app-root/src
        - name: PORT
          value: "8081"
        image: ' '
        imagePullPolicy: Always
        name: rh-brand-model
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8081
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: "1"
          requests:
            nvidia.com/gpu: "1"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
