openshift/deployment-rh-brand-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"rh-brand-ui:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"rh-brand-ui\")].image"}]'
  labels:
    app: rh-brand-ui
    app.kubernetes.io/component: rh-brand-ui
    app.kubernetes.io/instance: rh-brand-ui
  name: rh-brand-ui
  namespace: red-brand
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: rh-brand-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: rh-brand-ui
    spec:
      containers:
      - env:
        - name: API_URL
          value: rh-brand-api:5000
        - name: IMAGE_PREFIX
          value: https
        - name: IMAGE_URL
          value: rh-brand-api-red-brand.apps.sno.sandbox2010.opentlc.com
        image: ' '
        imagePullPolicy: Always
        name: rh-brand-ui
        ports:
        - containerPort: 3000
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
