openshift/svc-rh-brand-model.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: rh-brand-model
    app.kubernetes.io/component: rh-brand-model
    app.kubernetes.io/instance: rh-brand-model
  name: rh-brand-model
  namespace: red-brand
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deployment: rh-brand-model
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
