openshift/svc-rh-brand-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: rh-brand-ui
    app.kubernetes.io/component: rh-brand-ui
    app.kubernetes.io/instance: rh-brand-ui
  name: rh-brand-ui
  namespace: red-brand
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: rh-brand-ui
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
